add analysis support module

--- a/GNN_explained.ipynb
+++ b/GNN_explained.ipynb
@@ -90,10 +90,10 @@
     "\n",
     "$$\n",
     "\\Delta \\mathbf{v}_i^m =  \\sum_{j \\in \\mathcal{N}(i)} \\mathbf{v}_j\\phi_{vv}(s_j) W_{vv}(r_{ij})\n",
-    "+ \\sum_{j \\in \\mathcal{N}(i)} \\phi_{vs}(s_j) W_{vs}(r_{ij}) \\frac{\\mathbf{v}_{ij}}{r_{ij}}\n",
+    "+ \\sum_{j \\in \\mathcal{N}(i)} \\phi_{vs}(s_j) W_{vs}(r_{ij}) \\frac{\\mathbf{r}_{ij}}{r_{ij}}\n",
     "$$\n",
     "\n",
-    "第一項は前述のゲート機構による更新に対応し、第２項は実はフィルター$W(r_{ij})$を微分したようなものとみなすことができる。これによって「同変な」フィルターを実現している。"
+    "第一項は前述のゲート機構と同じアイデアで、ベクトルをスケール変換する演算に対応し、第２項は実はフィルター$W(r_{ij})$を微分したようなものとみなすことができる。これによって「同変な」フィルターを実現している。"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "metadata": {},
    "source": [
     "## Update layer\n",
-    "作成したメッセージを用いて、ノードの特徴量を更新する際にもいくつかの工夫が用いられている。更新の際にも非線形変換が入るのが通例なので、ここでもゲート機構を用いる。ゲート機構には、ベクトル特徴量をスカラーに落とすための内積が用いられている。その内積に使う行列を、ベクトル特徴量に対する線形変換として学習させている。\n",
+    "作成したメッセージを用いて、ノードの特徴量を更新する際にもいくつかの工夫が用いられている。更新の際には非線形変換が入るのが通例なので、ここでゲート機構を用いる。ゲート機構には、ベクトル特徴量をスカラーに落とすための内積が用いられている。その内積に使う行列を、ベクトル特徴量に対する線形変換として学習させている。\n",
     "\n",
     "その際、２つの行列を生成し、それらを組み合わせて使うことで、うまくスカラー特徴量と、ベクトル特徴量を結びつけることができる。\n",
     "生成される行列２つをそれぞれ$U,V$と表記し、スカラー特徴量、ベクトル特徴量のUpdateを以下のように定義する。\n",
