--- a/painn_test/calculator_test/test_calculator.ipynb
+++ b/painn_test/calculator_test/test_calculator.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,9 +57,49 @@
     "model=Painn(natom_basis=60,n_radial=20, cutoff=cutoff,epsilon=1e-5, num_interactions=2)\n",
     "\n",
     "\n",
-    "model_path='/home/emi/ML/simpleGNN/simplegnn/painn_test/painn_model.pth'\n",
+    "model_path='/home/emi/ML/simpleGNN/simplegnn/painn_test/Na2O-SiO2/with_press/painn_model.pth'\n",
     "\n",
     "model.load_state_dict(torch.load(model_path,weights_only=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "odict_keys(['embedding.embedding.weight', 'message_layers.0.interaction_context_network.0.weight', 'message_layers.0.interaction_context_network.0.bias', 'message_layers.0.interaction_context_network.2.weight', 'message_layers.0.interaction_context_network.2.bias', 'message_layers.0.filter_network.0.weight', 'message_layers.0.filter_network.0.bias', 'message_layers.1.interaction_context_network.0.weight', 'message_layers.1.interaction_context_network.0.bias', 'message_layers.1.interaction_context_network.2.weight', 'message_layers.1.interaction_context_network.2.bias', 'message_layers.1.filter_network.0.weight', 'message_layers.1.filter_network.0.bias', 'mixing_layers.0.epsilon', 'mixing_layers.0.intraatomic_context_net.0.weight', 'mixing_layers.0.intraatomic_context_net.0.bias', 'mixing_layers.0.intraatomic_context_net.2.weight', 'mixing_layers.0.intraatomic_context_net.2.bias', 'mixing_layers.0.mu_channel_mix.0.weight', 'mixing_layers.0.mu_channel_mix.0.bias', 'mixing_layers.1.epsilon', 'mixing_layers.1.intraatomic_context_net.0.weight', 'mixing_layers.1.intraatomic_context_net.0.bias', 'mixing_layers.1.intraatomic_context_net.2.weight', 'mixing_layers.1.intraatomic_context_net.2.bias', 'mixing_layers.1.mu_channel_mix.0.weight', 'mixing_layers.1.mu_channel_mix.0.bias', 'output.0.weight', 'output.0.bias', 'output.2.weight', 'output.2.bias'])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.load(model_path,weights_only=False).keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.cutoff"
    ]
   },
   {
