--- a/check_basis/check_basis_cutoff.ipynb
+++ b/check_basis/check_basis_cutoff.ipynb
@@ -428,7 +428,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2b37d1b8fd90>"
+       "<matplotlib.legend.Legend at 0x2b274c161810>"
       ]
      },
      "execution_count": 4,
@@ -488,7 +488,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2b37d1c3cf10>"
+       "<matplotlib.legend.Legend at 0x2b274cc68a10>"
       ]
      },
      "execution_count": 6,
@@ -523,7 +523,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2b36dd656dd0>"
+       "<matplotlib.legend.Legend at 0x2b274c61d750>"
       ]
      },
      "execution_count": 7,
@@ -565,7 +565,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2b37d27f6c90>"
+       "<matplotlib.legend.Legend at 0x2b274cd4ed10>"
       ]
      },
      "execution_count": 8,
@@ -604,16 +604,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2b37d2a33150>"
+       "<matplotlib.legend.Legend at 0x2b274cd158d0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -636,16 +636,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2b37d2b11610>"
+       "<matplotlib.legend.Legend at 0x2b274ce9d410>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -668,16 +668,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2b37d29fbe10>"
+       "<matplotlib.legend.Legend at 0x2b274cf49b10>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
